--- a/Lesson1/Practice/practice1.html
+++ b/Lesson1/Practice/practice1.html
@@ -85,8 +85,8 @@
     <div class="contact">
         <div class="card">
             <h2>Thông tin liên hệ</h2>
-            <a href="https://github.com/nguyenxcuong-dev">GitHub</a>
-            <a href="https://www.facebook.com/NTXC512/">Facebook</a>
+            <a href="https://github.com/nguyenxcuong-dev" target="_blank">GitHub</a>
+            <a href="https://www.facebook.com/NTXC512/" target="_blank">Facebook</a>
         </div>
         <p class="email">Email: <a href="mailto: xcuong286@gmail.com">xcuong286@gmail.com</a></p>
         <p class="phone">Phone: <a href="tel:+84899939682">0899939682</a></p>
