--- a/Lesson1/Practice/index.html
+++ b/Lesson1/Practice/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Information</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Lesson1/Practice/css/index.css">
 </head>
 <body>
     <!-- BEGIN: INFORMATION -->
