--- a/Lesson1/Practice/detail.html
+++ b/Lesson1/Practice/detail.html
@@ -26,7 +26,7 @@
                 <p><b>Email: </b><a href="mailto:xcuong286@gmail.com">xcuong286@gmail.com</a></p>
                 <p><b>Điện thoại: </b><a href="tel:+84899939682">0899939682</a></p>
                 <p><b>Địa chỉ: </b>Hà Nội, Việt Nam</p>
-                <p><b>Social Media: </b><a href="https://www.facebook.com/NTXC512">Facebook</a></p>
+                <p><b>Social Media: </b><a href="https://www.facebook.com/NTXC512" target="_blank">Facebook</a></p>
             </div>
 
             <!-- Tech Skill -->
