Update head icon

--- a/Lesson1/Practice/detail.html
+++ b/Lesson1/Practice/detail.html
@@ -3,7 +3,8 @@
   <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Xuan Cuong Profile</title>
+        <link rel="icon" href="./image/icon.png">
         <link rel="stylesheet" href="./css/detail.css">
   </head>
   <body>
@@ -26,14 +27,14 @@
                 <p><b>Email: </b><a href="mailto:xcuong286@gmail.com">xcuong286@gmail.com</a></p>
                 <p><b>Điện thoại: </b><a href="tel:+84899939682">0899939682</a></p>
                 <p><b>Địa chỉ: </b>Hà Nội, Việt Nam</p>
-                <p><b>Social Media: </b><a href="https://www.facebook.com/NTXC512">Facebook</a></p>
+                <p><b>Social Media: </b><a href="https://www.facebook.com/NTXC512" target="_blank">Facebook</a></p>
             </div>
 
             <!-- Tech Skill -->
             <div class="skill right">
                 <h3>Kỹ năng</h3>
                 <hr>
-                <p><b>Front-end: </b>HTML, CSS, JavaSCript</p>
+                <p><i></i><b>Front-end: </b>HTML, CSS, JavaSCript</p>
                 <p><b>Framework: </b>React, Nodejs</p>
                 <p><b>Back-end: </b>PHP-Laravel, Python-Django, Java-SpringBoot</p>
                 <p><b>Database: </b>SQL, MongoDB</p>
