add notification animation

--- a/Lesson2/BootstrapNav/index.html
+++ b/Lesson2/BootstrapNav/index.html
@@ -9,21 +9,27 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm bg-light m-2">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">MySite</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="https://github.com/xcuong-512" target="_blank" class="nav-link">Product</a></li>
-                <li class="nav-item"><a href="https://github.com/xcuong-512" target="_blank" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="https://www.facebook.com/NTXC512" target="_blank" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Notification</a></li>
-            </ul>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">MySite</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+                        <li class="nav-item"><a href="https://github.com/xcuong-512" target="_blank" class="nav-link">Product</a></li>
+                        <li class="nav-item"><a href="https://github.com/xcuong-512" target="_blank" class="nav-link">Services</a></li>
+                        <li class="nav-item"><a href="https://www.facebook.com/NTXC512" target="_blank" class="nav-link">Contact</a></li>
+                        <li class="nav-item">
+                            <div class="me-auto position-relative">
+                                <a href="#" class="nav-link">Notification</a>
+                                <span class="badge bg-danger rounded-bottom-circle position-absolute top-0 end-0">5</span>
+                            </div>
+                            
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </nav>
     </header>
 
